# ha-automation

./: .gitignore  AGENTS.md  AI_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
examples/: ai_usage_example.py  create_automation_example.py  example_automations.py  generate_automation_yaml.py  improved_yaml_workflow.py  lock_event_monitor.py
ha_automation/: __init__.py  automation_manager.py  cli.py  client.py  device_discovery.py  models.py
ha_automation/_data/: AGENTS.en.md  AGENTS.md  AGENTS.zh-CN.md  config.template  example_automation.py
